# capi-linker-error

./: CHANGELOG.md  LICENSE  README.md  capi-linker-error.cabal
app/: Main.hs  foo.c
